<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:background="@null"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:textCursorDrawable="@null"
        android:gravity="center_vertical"
        android:text="test"/>


        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="choisir une Date"/>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_lieu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Lieu de réunion"
        android:paddingVertical="10dp"
        android:textColorHint="#737373"
        app:endIconMode="clear_text"
        app:endIconTint="#737373"
        app:helperTextTextColor="@color/black"
        app:hintTextColor="@color/black"
        app:startIconContentDescription="description"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_lieu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textAutoComplete"
            android:textColor="@color/black"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sujet"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Sujet de Reunion"
        android:paddingVertical="10dp"
        android:textColorHint="#737373"
        app:endIconMode="clear_text"
        app:endIconTint="#737373"
        app:helperTextTextColor="@color/black"
        app:hintTextColor="#737373"
        app:startIconContentDescription="description"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_sujet1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textAutoComplete"
            android:textColor="@color/black"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_listedesparticipants"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Liste des participants séparées par virgule"
        android:paddingVertical="10dp"
        android:textColorHint="#737373"
        app:endIconMode="clear_text"
        app:endIconTint="#737373"
        app:helperTextTextColor="@color/black"
        app:hintTextColor="@color/black"
        app:startIconContentDescription="description"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_listedesparticipants1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textAutoComplete"
            android:textColor="@color/black"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>