...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkbox_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="Date de réunion"
            android:onClick="onCheckboxClicked"/>

...
